Actualizacion y añadir albums

--- a/Practica-2-Portfolio/index.html
+++ b/Practica-2-Portfolio/index.html
@@ -9,19 +9,19 @@
 
   <body>
     <div class="wrapper">
-      <section class="hero">
-        <header class="main-header">
-          <nav>
-            <ul>
-              <li><a href="#home">HOME</a></li>
-              <li><a href="#biography">BIOGRAPHY</a></li>
-              <li><a href="#albums">ALBUMS</a></li>
-              <li><a href="#on-tour">ON TOUR</a></li>
-              <li><a href="#contact">CONTACT</a></li>
-            </ul>
-          </nav>
-        </header>
+      <header class="main-header">
+        <nav>
+          <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#biography">BIOGRAPHY</a></li>
+            <li><a href="#albums">ALBUMS</a></li>
+            <li><a href="#on-tour">ON TOUR</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </header>
 
+      <section class="hero">
         <div class="hero-content">
           <h1>MORA</h1>
           <p>Singer · Songwriter · Producer</p>
@@ -31,7 +31,7 @@
 
       <section class="biography" id="biography">
         <div class="biography-img">
-          <img src="/Practica-2-Portfolio/assets/biography.png" alt="" />
+          <img src="assets/biography.png" alt="" />
         </div>
         <div class="biography-text">
           <h1>BIOGRAPHY</h1>
@@ -47,22 +47,13 @@
             differently.
           </p>
           <div class="social-media">
-            <a href="#"
-              ><img src="/Practica-2-Portfolio/assets/Vector.svg" alt="Spotify"
-            /></a>
-            <a href="#"
-              ><img
-                src="/Practica-2-Portfolio/assets/youtube.svg"
-                alt="Youtube"
-            /></a>
-            <a href="#"
-              ><img
-                src="/Practica-2-Portfolio/assets/Group.svg"
-                alt="Instagram"
-            /></a>
+            <a href="#"><img src="assets/Vector.svg" alt="Spotify" /></a>
+            <a href="#"><img src="assets/youtube.svg" alt="Youtube" /></a>
+            <a href="#"><img src="assets/Group.svg" alt="Instagram" /></a>
           </div>
         </div>
       </section>
+
       <section class="biography" id="origins">
         <div class="biography-text">
           <h1>THE origins</h1>
@@ -75,19 +66,20 @@
             would later become his life — making others <b>feel </b> through
             sound. <br /><br />
             From those moments, his way of creating was born: guided by
-            intuition, emotion, and a genuine connection to what’s real.
+            intuition, emotion, and a genuine connection to what's real.
             <br /><br />
             That essence is still there — <br /><br />the same kid, still
             experimenting, just with a much bigger stage.
           </p>
         </div>
         <div class="biography-img">
-          <img src="/Practica-2-Portfolio/assets/origins.png" alt="" />
+          <img src="assets/origins.png" alt="" />
         </div>
       </section>
+
       <section class="biography" id="aesthetics">
         <div class="biography-img">
-          <img src="/Practica-2-Portfolio/assets/aesthetics.png" alt="" />
+          <img src="assets/aesthetics.png" alt="" />
         </div>
         <div class="biography-text">
           <div class="title">
@@ -97,7 +89,7 @@
             <h2>The Versatile Look and Identity</h2>
             <br />
             <p>
-              Mora’s image has evolved from raw, urban streetwear to a modern
+              Mora's image has evolved from raw, urban streetwear to a modern
               sophistication, effortlessly blending high-fashion with essential
               accessories. He is a master of layering, using jewelry, statement
               sunglasses, and oversized garments that act as an extension of his
@@ -109,7 +101,7 @@
             <h2>The Visual Artistry of the Covers</h2>
             <br />
             <p>
-              Mora’s image has evolved from raw, urban streetwear to a modern
+              Mora's image has evolved from raw, urban streetwear to a modern
               sophistication, effortlessly blending high-fashion with essential
               accessories. He is a master of layering, using jewelry, statement
               sunglasses, and oversized garments that act as an extension of his
@@ -117,6 +109,266 @@
               seriousness that contrasts perfectly with the raw emotion of his
               lyrics.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="albums">
+        <h1>ALBUMS</h1>
+
+        <div class="latest-album-container">
+          <h3>Latest Album</h3>
+
+          <div class="latest-album">
+            <div class="latest-album-top">
+              <div class="latest-album-text">
+                <h1>Lo mismo de siempre</h1>
+                <p>18 · 05 · 2025</p>
+                <p>
+                  Mora's latest album is a compelling evolution, fusing personal
+                  lyrics with his signature trap and alternative reggaeton
+                  sound.
+                </p>
+              </div>
+              <div class="latest-album-cover"></div>
+            </div>
+            <div class="latest-album-down">
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/3I25c1rihFkPSh2s1ceLq8?utm_source=generator&theme=0"
+                width="18%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/1vvWri6BpgA6Pqz6JixNFa?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/2mlMfacUBUbWcPtHlOZqdr?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/0nNPy3D4rBK52KZhjPLHRP?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/1cmfXbOvNJt7iDrnJy5BRE?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/7zeycG8xQEr8JnAFI1IYUn?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/18m5dJOPB2geFwOymXNaWg?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/4tArGA8NXqO2YIp9t1tGCu?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/3bn6CxnWxuvYZz3i9vE2dc?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/3Ob9NJaBlOGDvndnG6G2PW?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/6lcStESNJcxOnwUHIC7phJ?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/0iDvrlGtHMldrW0X85y8zf?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/23t1V5mOAsixIY5RVtTIng?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/4LTUsC5Qh4gQUvL2P6rBkD?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/3ox0QBPo6HmH8AqK3cnX4N?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/2BvPMS2XWfnCpHHvWeOyeC?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/track/0WdoK9ynnJxeAawMFICThD?utm_source=generator&theme=0"
+                width="15%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </div>
+          </div>
+          <div class="other-albums">
+            <h1>Other Albums</h1>
+            <div class="estrella">
+              <h1>Estrella</h1>
+              <p>28 · 08 · 2023</p>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/album/0SoJvPHbKVhvmVJOp3kzp3?utm_source=generator&theme=0"
+                width="25%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </div>
+            <div class="paraiso">
+              <h1>Paraiso</h1>
+              <p>03 · 11 · 2022</p>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/album/7b3PrkHcWx17AQwlI2M1Uc?utm_source=generator&theme=0"
+                width="25%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </div>
+            <div class="microdosis">
+              <h1>Microdosis</h1>
+              <p>28 · 08 · 2025</p>
+              <iframe
+                data-testid="embed-iframe"
+                style="border-radius: 12px"
+                src="https://open.spotify.com/embed/album/0QLDQG7Jx78rEUDW03IhHC?utm_source=generator&theme=0"
+                width="25%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
