--- a/Practica-2-Portfolio/index.html
+++ b/Practica-2-Portfolio/index.html
@@ -36,15 +36,24 @@
         <div class="biography-text">
           <h1>BIOGRAPHY</h1>
           <p>
-            From San Juan, Puerto Rico, <b>Mora</b> stands out as a creative
-            force shaping the future of Latin urban music. Mixing reggaetón,
-            trap, and experimental sounds, he turns emotion into rhythm and
-            style into identity. <br /><br />
-            Recognized for his melodic vision and fearless approach, Mora blends
-            introspection with innovation—crafting music that feels both fresh
-            and timeless. <br /><br />
-            The voice of a generation that moves, thinks, and dreams
-            differently.
+            From San Juan, Puerto Rico, <strong>Mora</strong> stands out as a creative force
+            shaping the future of Latin urban music. Mixing reggaetón, trap, and
+            experimental sounds, he turns emotion into <strong>rythm</strong> and style into
+            identity. His unique ability to seamlessly blend genres has
+            positioned him as one of the most innovative artists in the
+            contemporary Latin music scene, pushing boundaries while staying
+            true to his Caribbean roots. <br><br> Recognized for his melodic vision and
+            fearless approach, <strong>Mora</strong> blends introspection with
+            innovation—crafting music that feels both fresh and timeless. Each
+            track is a journey through vulnerable lyrics wrapped in infectious
+            beats, creating an atmospheric sound that resonates with millions.
+            His collaborations with industry titans and emerging talents alike
+            showcase his versatility, while his solo work demonstrates a
+            distinctive artistic voice that refuses to be confined by
+            traditional genre limitations. <br><br> The voice of a generation that moves,
+            thinks, and dreams differently. <strong>Mora</strong> represents the new wave of
+            Latin artists who aren't afraid to experiment, to be vulnerable, and
+            to challenge the status quo.
           </p>
           <div class="social-media">
             <a href="#"><img src="assets/Vector.svg" alt="Spotify" /></a>
@@ -58,18 +67,18 @@
         <div class="biography-text">
           <h1>THE origins</h1>
           <p>
-            Long before the stages and studios, Mora was a curious kid who found
+            Long before the stages and studios, <strong>Mora</strong> was a curious kid who found
             music in everything around him. <br /><br />
-            At home in Puerto Rico, everyday sounds turned into melodies, and
+            At home in <strong>Puerto Rico</strong>, everyday sounds turned into melodies, and
             creativity became his way to understand the world. <br /><br />
             Between drawings, games, and early rhythms, he began to imagine what
             would later become his life — making others <b>feel </b> through
             sound. <br /><br />
             From those moments, his way of creating was born: guided by
-            intuition, emotion, and a genuine connection to what's real.
+            intuition, emotion, and a genuine <strong>connection</strong> to what's real.
             <br /><br />
             That essence is still there — <br /><br />the same kid, still
-            experimenting, just with a much bigger stage.
+            <strong>experimenting</strong>, just with a much bigger stage.
           </p>
         </div>
         <div class="biography-img">
@@ -371,6 +380,174 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="ontour">
+        <div class="text">
+          <p>SPAIN</p>
+          <h1>LO MISMO DE LA OTRA VEZ</h1>
+        </div>
+      </section>
+      <section class="ontour-container">
+        <div class="ontour-title">
+          <h1>ON TOUR</h1>
+          <p>
+            No te quedes con ganas de "Lo Mismo de la Otra Vez". Consigue tu
+            ticket y siente la Estela en tu ciudad.
+          </p>
+        </div>
+        <div class="ontour-dates">
+          <div class="cities" id="Madrid">
+            <div class="cities-left">
+              <h1>MADRID</h1>
+              <p>WiZink Center - Viernes, 7 de junio 2026</p>
+            </div>
+            <div class="cities-right">
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="cities" id="Barcelona">
+            <div class="cities-left">
+              <h1>BARCELONA</h1>
+              <p>Palau Sant Jordi - 9 de junio 2026</p>
+            </div>
+            <div class="cities-right">
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="cities" id="Valencia">
+            <div class="cities-left">
+              <h1>VALENCIA</h1>
+              <p>
+                Ciudad de las Artes y las Ciencias - Martes, 11 de junio 2026
+              </p>
+            </div>
+            <div class="cities-right">
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="cities" id="Sevilla">
+            <div class="cities-left">
+              <h1>SEVILLA</h1>
+              <p>Estadio Olímpico de la Cartuja - Sábado, 15 de junio 2026</p>
+            </div>
+            <div class="cities-right">
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+          <div class="cities" id="Murcia">
+            <div class="cities-left">
+              <h1>MURCIA</h1>
+              <p>Plaza de Toros de Murcia - Sábado, 22 de junio 2026</p>
+            </div>
+            <div class="cities-right">
+              <a href="">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="merch">
+        <h1>MERCHANDISING</h1>
+
+        <h2 class="section-title">HOODIES:</h2>
+        <div class="product">
+          <div class="product-card">
+            <div class="product-image blue-hoodie"></div>
+            <div class="color-options">
+              <span class="color-dot color-blue"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-gray"></span>
+            </div>
+            <div class="product-name">Blue Estrella Hoddie</div>
+            <div class="product-price">79,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image pink-hoodie"></div>
+            <div class="color-options">
+              <span class="color-dot color-blue"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-gray"></span>
+            </div>
+            <div class="product-name">Microdosis Pink Hoodie</div>
+            <div class="product-price">79,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image white-hoodie"></div>
+            <div class="color-options">
+              <span class="color-dot color-blue"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-black"></span>
+            </div>
+            <div class="product-name">Lo Mismo De Siempre Hoodie</div>
+            <div class="product-price">79,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+        </div>
+
+        <h2 class="section-title">T-SHIRTS:</h2>
+        <div class="product">
+          <div class="product-card">
+            <div class="product-image beige-tshirt"></div>
+            <div class="color-options">
+              <span class="color-dot color-white"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-beige"></span>
+            </div>
+            <div class="product-name">Choli T-shirt</div>
+            <div class="product-price">48,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image pink-tshirt"></div>
+            <div class="color-options">
+              <span class="color-dot color-white"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-beige"></span>
+            </div>
+            <div class="product-name">Microdosis Pink T-Shirt</div>
+            <div class="product-price">48,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image white-tshirt"></div>
+            <div class="color-options">
+              <span class="color-dot color-white"></span>
+              <span class="color-dot color-green"></span>
+              <span class="color-dot color-pink"></span>
+              <span class="color-dot color-black"></span>
+            </div>
+            <div class="product-name">Media Luna T-Shirt</div>
+            <div class="product-price">48,95€</div>
+            <button class="btn-buy">BUY</button>
+          </div>
+        </div>
+      </section>
+      <section class="newsletter">
+        <div class="news-left">
+          <h2>JOIN OUR NEWSLETTER</h2>
+          <p>Stay tuned for my new projects.</p>
+          <label for="input">Enter your email:</label>
+          <input type="text" />
+          <button>Join us</button>
+        </div>
+        <div class="news-rigth">
+          <div class="img"></div>
+        </div>
+      </section>
+      <section class="newvideo">
+        <h1>Watch the latest release</h1>
+        <h2>DETRÁS DE TU ALMA (Visualizer)</h2>
+        <div class="img"></div>
       </section>
     </div>
   </body>
